Fix carousel images being too tall

--- a/assets/css/wordpress-news-kiosk-plugin.css
+++ b/assets/css/wordpress-news-kiosk-plugin.css
@@ -1538,6 +1538,7 @@
   max-width: 100%;
   height: auto;
   bottom: 0;
+  height: 100%;
   left: 0;
   margin: auto;
   max-width: 100%;
