--- a/assets/scss/components/_posts.scss
+++ b/assets/scss/components/_posts.scss
@@ -36,6 +36,7 @@
     @include img-responsive;
     
     bottom: 0;
+    height: 100%;
     left: 0;
     margin: auto;
     max-width: 100%;
